<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Solfege</string>
    <!--Modes-->
    <string name="sightSingingText">Sight Singing</string>
    <string name="earTrainingText">Ear Training</string>
    <!--Types-->
    <string name="rhythm">Rhythm</string>
    <string name="interval">Interval</string>
    <string name="melody">Melody</string>
    <string name="chord">Chord</string>
    <string name="arpeggio">Arpeggio</string>
    <string name="scale">Scale</string>
    <string name="progression">Progression</string>
    <!--Intervals-->
    <string name="unison">Unison</string>
    <string name="minor2nd">Minor 2nd</string>
    <string name="major2nd">Major 2nd</string>
    <string name="minor3rd">Minor 3rd</string>
    <string name="major3rd">Major 3rd</string>
    <string name="perfect4th">Perfect 4th</string>
    <string name="diminished5th">Diminished 5th</string>
    <string name="perfect5th">Perfect 5th</string>
    <string name="minor6th">Minor 6th</string>
    <string name="major6th">Major 6th</string>
    <string name="minor7th">Minor 7th</string>
    <string name="major7th">Major 7th</string>
    <string name="octave">Octave</string>
    <!--Durations-->
    <string name="wholeNote">Whole Note</string>
    <string name="halfNote">Half Note</string>
    <string name="halfNoteDotted">Half Note Dotted</string>
    <string name="quarterNote">Quarter Note</string>
    <string name="quarterNoteDotted">Quarter Note Dotted</string>
    <string name="eighthNote">Eighth Note</string>
    <string name="eighthNoteDotted">Eighth Note Dotted</string>
    <string name="sixteenthNote">Sixteenth Note</string>
    <string name="sixteenthNoteDotted">Sixteenth Note Dotted</string>
    <string name="thirtySecondNote">Thirty Second Note</string>
    <!--Scales-->
    <string name="majorScale">Major Scale</string>
    <string name="minorScale">Minor Scale</string>
    <string name="harmonicMajorScale">Harmonic Major Scale</string>
    <string name="melodicMajorScale">Melodic Major Scale</string>
    <string name="harmonicMinorScale">Harmonic Minor Scale</string>
    <string name="melodicMinorScale">Melodic Minor Scale</string>
    <string name="pentatonicMajorScale">Pentatonic Major Scale</string>
    <string name="pentatonicMinorScale">Pentatonic Minor Scale</string>
    <string name="bluesMajorScale">Blues Major Scale</string>
    <string name="bluesMinorScale">Blues Minor Scale</string>
    <string name="dorianScale">Dorian Scale</string>
    <string name="phrygianScale">Phrygian Scale</string>
    <string name="lydianScale">Lydian Scale</string>
    <string name="mixolydianScale">Mixolydian Scale</string>
    <string name="locrianScale">Locrian Scale</string>
    <!--Chords-->
    <string name="majorChord">Major Chord</string>
    <string name="minorChord">Minor Chord</string>
    <string name="augmentedChord">Augmented Chord</string>
    <string name="diminishedChord">Diminished Chord</string>
    <string name="sus2Chord">Sus2 Chord</string>
    <string name="sus4Chord">Sus4 Chord</string>
    <string name="major7Chord">Major7 Chord</string>
    <string name="minor7Chord">Minor7 Chord</string>
    <string name="_7Chord">7 Chord</string>
    <string name="_7b5Chord">7b5 Chord</string>
    <string name="_7sus4Chord">7sus4 Chord</string>
    <string name="diminished7Chord">Diminished7 Chord</string>
    <string name="minor7b5Chord">Minor7b5 Chord</string>
    <string name="major6Chord">Major6 Chord</string>
    <string name="minor6Chord">Minor6 Chord</string>
    <string name="major9Chord">Major9 Chord</string>
    <string name="minor9Chord">Minor9 Chord</string>
    <string name="_9Chord">9 Chord</string>
    <string name="major11Chord" tools:ignore="Typos">Major11 Chord</string>
    <string name="minor11Chord" tools:ignore="Typos">Minor11 Chord</string>
    <string name="_11Chord">11 Chord</string>
    <string name="major13Chord">Major13 Chord</string>
    <string name="minor13Chord">Minor13 Chord</string>
    <string name="_13Chord">13 Chord</string>
    <!--ChordTypes-->
    <string name="thirdChords">Third Chords</string>
    <string name="sixthChords">Sixth Chords</string>
    <string name="seventhChords">Seventh Chords</string>
    <string name="ninthChords">Ninth Chords</string>
    <string name="eleventhChords">Eleventh Chords</string>
    <string name="thirteenthChords">Thirteenth Chords</string>
    <!--Question-->
    <string name="newQuestion">New Question</string>
    <string name="playSample">Play Sample</string>
    <string name="replay">Replay</string>
    <string name="showInfo">Show Info</string>
    <string name="hideInfo">Hide Info</string>
    <string name="answerDurations">Please answer the durations you heard</string>
    <string name="answerDurationsAndNotes">Please answer the durations and notes you heard</string>
    <string name="play4_4OnC">"Play 4/4 On C"</string>
    <string name="playCentralC">Play C</string>
    <string name="ascendIt">Ascend It</string>
    <string name="playScale">Play Scale</string>
    <!--Setting-->
    <string name="setting">Setting</string>
    <string name="apply">Apply</string>
    <string name="durations">Durations</string>
    <string name="intervals">Intervals</string>
    <string name="scales">Scales</string>
    <string name="chords">Chords</string>
    <string name="chordTypes">Chord Types</string>
    <string name="all">All</string>
    <string name="unselected">Unselected</string>
    <string name="playMode">Play Mode</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="harmonic">Harmonic</string>
    <string name="random">Random</string>
    <string name="noteRange">Note Range</string>
    <string name="fromTo">From %1$s To %2$s</string>
    <string name="timeSignature">Time Signature</string>
    <string name="timeSignatureText">"%1$s / %2$s"</string>
    <string name="expertMode">Expert Mode</string>
    <string name="answerNotesAlso">Answer absolute notes also</string>
    <string name="answerScaleRootNoteAlso">Answer Scale Root Note Also</string>
    <string name="answerChordRootNoteAlso">Answer Chord Root Note Also</string>
    <string name="answerChordTypeAlso">Answer Chord Type Also</string>
    <string name="noteVelocity">Note Velocity</string>
    <string name="noteLength">Note Length</string>
    <string name="bars">Bars</string>
    <string name="oneBar">1 Bar</string>
    <string name="twoBars">2 Bars</string>
    <string name="number"> %1$d </string>
    <string name="percent"> %1$d%% </string>
    <string name="note"> %1$s </string>
    <!--ChooseDialog-->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ok">OK</string>
    <string name="chooseRange">Choose Range</string>
    <string name="chooseTimeSignature">Choose Time Signature</string>
    <string name="chooseDuration">Choose Duration</string>
    <string name="chooseNote">Choose Note</string>
    <string name="chooseInterval">Choose Interval</string>
    <string name="chooseScale">Choose Scale</string>
    <string name="chooseChord">Choose Chord</string>
    <string name="chooseChordType">Choose Chord Type</string>
    <string name="chooseDegree">Choose Degree</string>
    <!--Alert-->
    <string name="invalidSelection">Invalid Selection</string>
    <string name="alertInfo">Possible reason:\n1. \"Durations\" may be invalid\n2. \"Note Range\" too small\n3. There contains empty Selection</string>
    <!--Answer-->
    <string name="durationIs">"Duration is: "</string>
    <string name="noteIs">"Note is: "</string>
    <string name="intervalIs">"Interval is: "</string>
    <string name="lowerNoteIs">"Lower note is: "</string>
    <string name="higherNoteIs">"Higher note is: "</string>
    <string name="rootNoteIs">"Root note is: "</string>
    <string name="scaleIs">"Scale is: "</string>
    <string name="chordIs">"Chord is": </string>
    <string name="degreeIs">"Degree is: "</string>
    <string name="intervalNoteInformation">"Lower note is: %1$s\nInterval is: %2$s\nHigher note is: %3$s"</string>
    <string name="scaleNoteInformation">"%1$s %2$s"</string>
    <string name="progressionInformation">"%1$s %2$s, Degree %3$s"</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong…</string>
    <string name="wrong_char">" %1$s"</string>
    <!--Menu-->
    <string name="language">Language</string>
    <string name="English">English</string>
    <string name="Chinese">中文</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="githubPage">GitHub Page</string>
    <string name="giteePage">Gitee Page</string>
    <string name="githubUrl">https://github.com/cubic759/Solfege</string>
    <string name="giteeUrl">https://gitee.com/cubic759/Solfege</string>
</resources>